1510.	[security]		tmark
	Added a new parameter, "max-row-errors", to Memfile lease database
	configuration for kea-dhcp4 and kea-dhcp6.  This parameter can be
	used to limit the number of rows discarded due to error during
	lease file loading after which the server will abandon the effort
	and exit. The default value of 0 disables the limit.
	CVE:2019-6474
	(Gitlab #805,!9-p, git 1025d668f8477ebb5df9bf234bb18415d99ad403)

1508.	[security]		tmark
	Prevent the DHCP servers from asserting when malformed
	hostname or FQDN options are received.  Now the servers will
	drop the DHCP packets containing the malformed options.
	CVE:2019-6473
	(Gitlab #730,!7-p git 2361b6f769a322dfa3d61e956b6bc0d6882d9760)

1507.	[bug]		tmark
	Added logic to kea-dhcp6 to catch values for client or
	server DUIDs that exceed 128 bytes to inbound packet
	sanity checking.
	CVE:2019-6472
	(Gitlab #722,!3-p git deda53e55c8afdd230ee05597c0377d6dacfefe7)

Kea 1.5.0 released on Dec 14, 2018

1506.	[build]		marcin
	Bumped up libraries version numbers for Kea 1.5.0 final release.
	(Gitlab #338,!168, git 551c5d704804d0ab2ea276e95dbae66b9d0f5561)

1505.	[bug]		marcin
	Corrected an issue in the lease_cmds hooks library which caused
	errors while adding leases with high lease expiration time value
	to the database. Many thanks to Shawn Routhier from Infoblox for
	finding and reporting the issue.
	(Gitlab #337,!167, git 3fcdc28814310ac93b3903897e952b3b60cfa0bc)

1504.	[bug]		fdupont
	Created separate control buffers for reception and transmission
	over UDP sockets.
	(Gitlab #327,!166, git cbb573858d7b1a4d2ba2316db457aa55ab037fc3)

1503.	[doc]		fdupont, marcin
	Updated "JSON Configuration" section of the Kea User's Guide.
	(Gitlab #198,!160, git 94c66b3c071d7bbf4b247bf57cd75ddcc343177e)

1502.	[bug]		fdupont
	Unicode parser for JSON structures has been improved. It now
	handles escape sequences better.
	(Gitlab #45,!40, git ba9b18cf2af66f8fb80e3dbbe13da11c99764588)

1501.	[func]		fdupont