@@ -1,4 +1,4 @@
-// Copyright (C) 2014-2018 Internet Systems Consortium, Inc. ("ISC")
+// Copyright (C) 2014-2019 Internet Systems Consortium, Inc. ("ISC")
 //
 // This Source Code Form is subject to the terms of the Mozilla Public
 // License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -105,9 +105,11 @@ CSVLeaseFile4Test::writeSampleFile() const {
                   "fqdn_fwd,fqdn_rev,hostname,state,user_context\n"
                   "192.0.2.1,06:07:08:09:0a:bc,,200,200,8,1,1,"
                   "host.example.com,0,\n"
-                  "192.0.2.1,,a:11:01:04,200,200,8,1,1,host.example.com,0,\n"
-                  "192.0.3.15,dd:de:ba:0d:1b:2e:3e:4f,0a:00:01:04,100,100,7,"
-                  "0,0,,1,{ \"foobar\": true }\n");
+                  "192.0.2.2,,,200,200,8,1,1,host.example.com,0,\n"
+                  "192.0.2.3,dd:de:ba:0d:1b:2e:3e:4f,0a:00:01:04,100,100,7,"
+                  "0,0,,1,{ \"foobar\": true }\n"
+                  "192.0.2.4,,11:22:33:44:55:66,200,200,8,1,1,host.example.com,0,\n"
+                  "192.0.2.5,,,200,200,8,1,1,,1,\n");
 }
 
 // This test checks the capability to read and parse leases from the file.
@@ -148,11 +150,12 @@ TEST_F(CSVLeaseFile4Test, parse) {
     EXPECT_FALSE(lease->getContext());
     }
 
-    // Second lease is malformed - HW address is empty when state 
+    // Second lease is malformed - has no HW address or client id and state
     // is not declined.
     {
     SCOPED_TRACE("Second lease malformed");
     EXPECT_FALSE(lf.next(lease));
+    EXPECT_FALSE(lease);
     checkStats(lf, 2, 1, 1, 0, 0, 0);
     }
 
@@ -165,7 +168,7 @@ TEST_F(CSVLeaseFile4Test, parse) {
     checkStats(lf, 3, 2, 1, 0, 0, 0);
 
     // Verify that the third lease is correct.
-    EXPECT_EQ("192.0.3.15", lease->addr_.toText());
+    EXPECT_EQ("192.0.2.3", lease->addr_.toText());
     HWAddr hwaddr3(*lease->hwaddr_);
     EXPECT_EQ("dd:de:ba:0d:1b:2e:3e:4f", hwaddr3.toText(false));
     ASSERT_TRUE(lease->client_id_);
@@ -181,21 +184,49 @@ TEST_F(CSVLeaseFile4Test, parse) {
     EXPECT_EQ("{ \"foobar\": true }", lease->getContext()->str());
     }
 
-    // There are no more leases. Reading should cause no error, but the returned
-    // lease pointer should be NULL.
+    // Fourth lease has no hardware address but has client id
     {
-    SCOPED_TRACE("Fifth read empty");
+    SCOPED_TRACE("Fourth lease valid");
     EXPECT_TRUE(lf.next(lease));
-    EXPECT_FALSE(lease);
-    checkStats(lf, 4, 2, 1, 0, 0, 0);
+    ASSERT_TRUE(lease);
+    checkStats(lf, 4, 3, 1, 0, 0, 0);
+
+    EXPECT_EQ("192.0.2.4", lease->addr_.toText());
+    ASSERT_TRUE(lease->hwaddr_);
+    EXPECT_TRUE(lease->hwaddr_->hwaddr_.empty());
+    ASSERT_TRUE(lease->client_id_);
+    EXPECT_EQ("11:22:33:44:55:66", lease->client_id_->toText());
     }
 
-    // We should be able to do it again.
+    // Fifth lease has no hardware address or client id but is declined
+    {
+    SCOPED_TRACE("Fifth lease valid");
+    EXPECT_TRUE(lf.next(lease));
+    ASSERT_TRUE(lease);
+    checkStats(lf, 5, 4, 1, 0, 0, 0);
+
+    EXPECT_EQ("192.0.2.5", lease->addr_.toText());
+    ASSERT_TRUE(lease->hwaddr_);
+    EXPECT_TRUE(lease->hwaddr_->hwaddr_.empty());
+    ASSERT_FALSE(lease->client_id_);
+    EXPECT_EQ(lease->state_, Lease::STATE_DECLINED);
+    }
+
+    // There are no more leases. Reading should cause no error, but the returned
+    // lease pointer should be NULL.
     {
     SCOPED_TRACE("Sixth read empty");
     EXPECT_TRUE(lf.next(lease));
     EXPECT_FALSE(lease);
-    checkStats(lf, 5, 2, 1, 0, 0, 0);
+    checkStats(lf, 6, 4, 1, 0, 0, 0);
+    }
+
+    // We should be able to do it again.
+    {
+    SCOPED_TRACE("Seventh read empty");
+    EXPECT_TRUE(lf.next(lease));
+    EXPECT_FALSE(lease);
+    checkStats(lf, 7, 4, 1, 0, 0, 0);
     }
 }
 
@@ -442,6 +473,70 @@ TEST_F(CSVLeaseFile4Test, highLeaseLifetime) {
                                0xFFFFFFFF, 50, 80, time(0),
                                8, true, true,
                                "host.example.com"));
+    // Write this lease out to the lease file.
+    ASSERT_NO_THROW(lf.append(*lease));
+
+    // Close the lease file.
+    lf.close();
+
+    Lease4Ptr lease_read;
+
+    // Re-open the file for reading.
+    ASSERT_NO_THROW(lf.open());
+
+    // Read the lease and make sure it is successful.
+    EXPECT_TRUE(lf.next(lease_read));
+    ASSERT_TRUE(lease_read);
+
+    // The valid lifetime and the cltt should match with the original lease.
+    EXPECT_EQ(lease->valid_lft_, lease_read->valid_lft_);
+    EXPECT_EQ(lease->cltt_, lease_read->cltt_);
+}
+
+// Verifies that it is not possible to output a lease with empty hwaddr in other
+// than the declined state
+TEST_F(CSVLeaseFile4Test, emptyHWAddrDefaultStateOnly) {
+    CSVLeaseFile4 lf(filename_);
+    ASSERT_NO_THROW(lf.recreate());
+    ASSERT_TRUE(io_.exists());
+
+    HWAddrPtr hwaddr;
+
+    // Create lease with null hwaddr and default state
+    Lease4Ptr lease_null_hwaddr(new Lease4(IOAddress("192.0.3.2"),
+                                hwaddr,
+                                NULL, 0,
+                                0xFFFFFFFF, time(0),
+                                8, true, true,
+                                "host.example.com"));
+    // Try to write this lease out to the lease file.
+    ASSERT_THROW(lf.append(*lease_null_hwaddr), BadValue);
+
+    hwaddr.reset(new HWAddr());
+
+    // Create lease with empty hwaddr and default state
+    Lease4Ptr lease_empty_hwaddr(new Lease4(IOAddress("192.0.3.2"),
+                                 hwaddr,
+                                 NULL, 0,
+                                 0xFFFFFFFF, time(0),
+                                 8, true, true,
+                                 "host.example.com"));
+    // Try to write this lease out to the lease file.
+    ASSERT_THROW(lf.append(*lease_empty_hwaddr), BadValue);
+
+    // Create lease with hwaddr and current time.
+    Lease4Ptr lease(new Lease4(IOAddress("192.0.3.2"),
+                               hwaddr0_,
+                               NULL, 0,
+                               0xFFFFFFFF, time(0),
+                               8, true, true,
+                               "host.example.com"));
+
+    // Decline the lease
+    lease->decline(1000);
+    ASSERT_TRUE(lease->hwaddr_);
+    EXPECT_EQ(lease->hwaddr_->toText(false), "");
+
     // Write this lease out to the lease file.
     ASSERT_NO_THROW(lf.append(*lease));
 
